{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 920,
  "lineage": "663b1c2f-a569-3ae5-c4bd-27a21b207fa4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:security-group/sg-0d959d1646842cc67",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d959d1646842cc67",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20220517072140532100000006",
            "name_prefix": "all_worker_management",
            "owner_id": "923820784277",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065f0f082ab13a682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:security-group/sg-0cb45d86da278580a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0cb45d86da278580a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20220517072140530700000004",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "923820784277",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065f0f082ab13a682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:security-group/sg-0f89a75f35c923b2c",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f89a75f35c923b2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20220517072140532200000007",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "923820784277",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-065f0f082ab13a682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:security-group/sg-00f0ba6ee5ed744f6",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f0ba6ee5ed744f6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-078dbf22de8d900ae"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "example-cluster-M4efIXz020220517072140530900000005",
            "name_prefix": "example-cluster-M4efIXz0",
            "owner_id": "923820784277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-cluster-M4efIXz0-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "example-cluster-M4efIXz0-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065f0f082ab13a682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:security-group/sg-078dbf22de8d900ae",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-078dbf22de8d900ae",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-063fad5753865eac9"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00f0ba6ee5ed744f6"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00f0ba6ee5ed744f6"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "example-cluster-M4efIXz020220517072141401300000008",
            "name_prefix": "example-cluster-M4efIXz0",
            "owner_id": "923820784277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-cluster-M4efIXz0-eks_worker_sg",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "owned"
            },
            "tags_all": {
              "Name": "example-cluster-M4efIXz0-eks_worker_sg",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-065f0f082ab13a682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2190856970",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00f0ba6ee5ed744f6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1457251232",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00f0ba6ee5ed744f6",
            "self": false,
            "source_security_group_id": "sg-078dbf22de8d900ae",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2732557105",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-078dbf22de8d900ae",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2730269838",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-078dbf22de8d900ae",
            "self": false,
            "source_security_group_id": "sg-00f0ba6ee5ed744f6",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-562210940",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-078dbf22de8d900ae",
            "self": false,
            "source_security_group_id": "sg-00f0ba6ee5ed744f6",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1850336475",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-078dbf22de8d900ae",
            "self": false,
            "source_security_group_id": "sg-078dbf22de8d900ae",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04eb31dab1b7731b9",
            "association_id": "eipassoc-0bdde6718d67ee816",
            "domain": "vpc",
            "id": "eipalloc-04eb31dab1b7731b9",
            "network_border_group": "eu-south-1",
            "network_interface": "eni-054c306b0b1861b05",
            "private_dns": "ip-10-0-4-135.eu-south-1.compute.internal",
            "private_ip": "10.0.4.135",
            "public_dns": "ec2-15-161-33-81.eu-south-1.compute.amazonaws.com",
            "public_ip": "15.161.33.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "example-cluster-vpc-eu-south-1a",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared"
            },
            "tags_all": {
              "Name": "example-cluster-vpc-eu-south-1a",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:internet-gateway/igw-0b965b38c13d47486",
            "id": "igw-0b965b38c13d47486",
            "owner_id": "923820784277",
            "tags": {
              "Name": "example-cluster-vpc",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared"
            },
            "tags_all": {
              "Name": "example-cluster-vpc",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared"
            },
            "vpc_id": "vpc-065f0f082ab13a682"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04eb31dab1b7731b9",
            "connectivity_type": "public",
            "id": "nat-003303b19dcd68cbe",
            "network_interface_id": "eni-054c306b0b1861b05",
            "private_ip": "10.0.4.135",
            "public_ip": "15.161.33.81",
            "subnet_id": "subnet-0f31bd5c4dfe54631",
            "tags": {
              "Name": "example-cluster-vpc-eu-south-1a",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared"
            },
            "tags_all": {
              "Name": "example-cluster-vpc-eu-south-1a",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fbbbc839c74deb971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-003303b19dcd68cbe",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fbbbc839c74deb97",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b965b38c13d47486",
            "id": "r-rtb-028cb971d35c2f25c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-028cb971d35c2f25c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:route-table/rtb-0fbbbc839c74deb97",
            "id": "rtb-0fbbbc839c74deb97",
            "owner_id": "923820784277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-003303b19dcd68cbe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-cluster-vpc-private",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared"
            },
            "tags_all": {
              "Name": "example-cluster-vpc-private",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-065f0f082ab13a682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:route-table/rtb-028cb971d35c2f25c",
            "id": "rtb-028cb971d35c2f25c",
            "owner_id": "923820784277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b965b38c13d47486",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-cluster-vpc-public",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared"
            },
            "tags_all": {
              "Name": "example-cluster-vpc-public",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-065f0f082ab13a682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096295f270abdad64",
            "route_table_id": "rtb-0fbbbc839c74deb97",
            "subnet_id": "subnet-04a0665e8908ffe85"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07823da98c7b82e2c",
            "route_table_id": "rtb-0fbbbc839c74deb97",
            "subnet_id": "subnet-09429771bdc21ca3f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000b172a3c53bc011",
            "route_table_id": "rtb-0fbbbc839c74deb97",
            "subnet_id": "subnet-064e7475d70d8a445"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092259d3e61507eeb",
            "route_table_id": "rtb-028cb971d35c2f25c",
            "subnet_id": "subnet-0f31bd5c4dfe54631"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067e263dbee905fef",
            "route_table_id": "rtb-028cb971d35c2f25c",
            "subnet_id": "subnet-0f10c557c29b55bed"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03938408299c26e99",
            "route_table_id": "rtb-028cb971d35c2f25c",
            "subnet_id": "subnet-0bb56c4b318dbb815"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:subnet/subnet-04a0665e8908ffe85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1a",
            "availability_zone_id": "eus1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a0665e8908ffe85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923820784277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-cluster-vpc-private-eu-south-1a",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "example-cluster-vpc-private-eu-south-1a",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-065f0f082ab13a682"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:subnet/subnet-09429771bdc21ca3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1b",
            "availability_zone_id": "eus1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09429771bdc21ca3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923820784277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-cluster-vpc-private-eu-south-1b",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "example-cluster-vpc-private-eu-south-1b",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-065f0f082ab13a682"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:subnet/subnet-064e7475d70d8a445",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1c",
            "availability_zone_id": "eus1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064e7475d70d8a445",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923820784277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-cluster-vpc-private-eu-south-1c",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "example-cluster-vpc-private-eu-south-1c",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-065f0f082ab13a682"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:subnet/subnet-0f31bd5c4dfe54631",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1a",
            "availability_zone_id": "eus1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f31bd5c4dfe54631",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "923820784277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-cluster-vpc-public-eu-south-1a",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "example-cluster-vpc-public-eu-south-1a",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-065f0f082ab13a682"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:subnet/subnet-0f10c557c29b55bed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1b",
            "availability_zone_id": "eus1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f10c557c29b55bed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "923820784277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-cluster-vpc-public-eu-south-1b",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "example-cluster-vpc-public-eu-south-1b",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-065f0f082ab13a682"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:subnet/subnet-0bb56c4b318dbb815",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-1c",
            "availability_zone_id": "eus1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb56c4b318dbb815",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "923820784277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-cluster-vpc-public-eu-south-1c",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "example-cluster-vpc-public-eu-south-1c",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-065f0f082ab13a682"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-1:923820784277:vpc/vpc-065f0f082ab13a682",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d78861a5016b61a0",
            "default_route_table_id": "rtb-02f180d7ef755f33f",
            "default_security_group_id": "sg-055a9252751b09282",
            "dhcp_options_id": "dopt-0649d1cba86f04889",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-065f0f082ab13a682",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f180d7ef755f33f",
            "owner_id": "923820784277",
            "tags": {
              "Name": "example-cluster-vpc",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared"
            },
            "tags_all": {
              "Name": "example-cluster-vpc",
              "kubernetes.io/cluster/example-cluster-M4efIXz0": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}